# CheckIT

./: README.md
checkit/: Cargo.toml  Dockerfile  createtable.sql  docker-compose.yml
checkit/docker/: Dockerfile  docker-compose.yml  my.cnf
checkit/docker/sql/: initDB.sql
checkit/src/: date.rs  font_loader.rs  init_view.rs  main.rs  reformat_dates.rs  render_date.rs  render_taskbar.rs  task.rs  view.rs
checkit/src/Model/: Todo.rs  mod.rs
checkit/src/controller/: font_loader.rs  mod.rs  reformat_dates.rs
checkit/src/model/: read_tasks.rs
checkit/src/view/: init_view.rs  mod.rs  render_date.rs  render_task.rs  render_taskbar.rs
